--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     but I am willing to do so in the future.
 </p>
 <div class="button">
-<a href="#" class=""></a>
-<a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Watch
+<a href="#works" class=""></a>
+<a href="#works" class="btn2"><span><i class='bx bx-play'></i></span>Watch
     My Work</a>
 
 
