--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
 <div class="contact-form">
     <form action="">
-        <input type="name" placeholder="Name Here" required>
-        <input type="email" placeholder="Email Address Here" required>
+        <input type="name" name="name" placeholder="Name Here" required>
+        <input type="email" name="email" placeholder="Email Address Here" required>
         
-        <textarea name="" id="" cols="35" rows="10" placeholder="Your message for me!" required></textarea>
+        <textarea name="message" id="" cols="35" rows="10" placeholder="Your message for me!" required></textarea>
         <input type="submit" value="Send Message" class="submit" required>
 
     </form>
