--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <h4> </p>
     <div class="list">
         <li><a href="#"></a></li>
-        <li><a href="#">dorothyemmanuelle@gmail.com</a></li>
+        <li><a href="mailto:dorothyemmanuelle@gmail.com">dorothyemmanuelle@gmail.com</a></li>
         <li><a href="#"></a></li>
     </div>
     
