--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <li><a href="#"></a></li>
         <li><a href="mailto:dorothyemmanuelle@gmail.com">dorothyemmanuelle@gmail.com</a></li>
         <br>
-        <li><a href=""> ^CLICK^ </a></li>
+        <li><a href=""> <strong>^CLICK^</strong> </a></li>
         <br> <br>
           
     </div>
