--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>MY PORTFOLIO</title>
+<title> Dorothy Mesia • Photography </title>
 <!--css ko-->
 <link rel="stylesheet" href="./style.css">
 <link rel="stylesheet"
@@ -184,16 +184,6 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     </div>
 </div>
 
-<div class="contact-form">
-    <form action="">
-        <input type="name" name="name" placeholder="Name Here" required>
-        <input type="email" name="email" placeholder="Email Address Here" required>
-        
-        <textarea name="message" id="" cols="35" rows="10" placeholder="Your message for me!" required></textarea>
-        <input type="submit" value="Send Message" class="submit" required>
-
-    </form>
-</div>
 
 <!--end section design--->
 <section class="end">
