--- a/index.html
+++ b/index.html
@@ -166,7 +166,21 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <br> <br>
           
     </div>
-    
+
+            <section class="contact" id="contact">
+    <h2 class="contact__heading section-heading">Contact</h2>
+    <p class="contacttext"> Contact Me! </p>
+    <form class="contactform" action=
+    form action="https://submit-form.com/<form-id>" method="post">
+      <input class="contactform-name" name="name" placeholder=
+      "Name Please" /> <input class="contactform-email" type="email"
+      name="_replyto" placeholder="Email Here" /> 
+      <textarea class="contactform-message" name="message"
+      placeholder="Message For Me!"></textarea>
+     </div><button type="button" id=
+        "form-submit">Submit</button>
+      </div>
+            </section>
 
     <div class="contact-icons">
         <a href="https://www.facebook.com/haiganae?mibextid=ZbWKwL" target="_blank">
