--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
             <section class="contact" id="contact">
     <h2 class="contact__heading section-heading">Contact</h2>
-    <p class="contacttext"> Contact Me! </p>
-    <form class="contactform" action=
+    <p class="contact-text"> Connect with me! </p>
+    <form class="contact-form" action=
     form action="https://submit-form.com/<form-id>" method="post">
       <input class="contactform-name" name="name" placeholder=
       "Name Please" /> <input class="contactform-email" type="email"
@@ -178,7 +178,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
       <textarea class="contactform-message" name="message"
       placeholder="Message For Me!"></textarea>
      </div><button type="button" id=
-        "form-submit">Submit</button>
+        "submit">Submit</button>
       </div>
             </section>
 
