--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
 
 </div>
-<h1>Dorothy.</h1>
-<h3><span>Photo</span>grapher</h3>
+<h1>Dorothy Emmanuelle </h1>
+<h3> a portfolio </h3>
 <p>An aspiring photographer who does not only look at the aesthetic of my works but also the story within them.<br>
     I photograph as a hobby and would like to land a job in the industry one day.<br>
     I also have a hobby of writing romance novels though I am not publishing any under my name, <br>
