--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
 </div>
 <h1>Dorothy Emmanuelle </h1>
-<h3> a portfolio </h3>
+<h3> a portfolio. </h3>
 <p>An aspiring photographer who does not only look at the aesthetic of my works but also the story within them.<br>
     I photograph as a hobby and would like to land a job in the industry one day.<br>
     I also have a hobby of writing romance novels though I am not publishing any under my name, <br>
@@ -70,9 +70,9 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
         <img src="aboutme.png">
     </div>
 <div class="about-text">
-    <h2>About Me</h2>
+    <h2> This is Me.</h2>
     <br>
-    <p>Hi, there! I'm <span>Dorothy</span> I'm a passionate photographer dedicated to transforming fleeting moments into lasting memories. 
+    <p>Hi, there! I'm DOROTHY EMMANUELLE, I'm a passionate photographer dedicated to transforming fleeting moments into lasting memories. 
     I specialize in nature, landscape, architectural and city life photography, blending technical precision with a creative vision to bring each subject to life.
     Through my lens, I aim to explore the beauty, emotion, and essence of the world around us. My goal is to evoke a connection and spark inspiration in every frame</p>
         
