--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <br>
     <p>Hi, there! I'm DOROTHY EMMANUELLE, I'm a passionate photographer dedicated to transforming fleeting moments into lasting memories. 
     I specialize in nature, landscape, architectural and city life photography, blending technical precision with a creative vision to bring each subject to life.
-    Through my lens, I aim to explore the beauty, emotion, and essence of the world around us. My goal is to evoke a connection and spark inspiration in every frame</p>
+    Through my lens, I aim to explore the beauty, emotion, and essence of the world around us. My goal is to evoke a connection and spark inspiration in every frame.</p>
         
 </div>
 
