--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 <section class="contact" id="contact">
     <div class="contact-text">
         <h2>Connect With Me!</span></h2>
-        <h4> </p>
     <div class="list">
         <li><a href="#"></a></li>
         <li><a href="mailto:dorothyemmanuelle@gmail.com">dorothyemmanuelle@gmail.com</a></li>
@@ -172,7 +171,8 @@ href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <a href="https://www.facebook.com/haiganae?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook"></i></a>
     <a href="https://www.instagram.com/haiganae?igsh=MWhiOTZvc3g1djZpZg==" target="_blank"><i class="fa-brands fa-instagram"></i></a>
 </div>
-
+</div>
+</section>
 
 
 
